--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<body>
 		<main>		
 			<header>
-				<nav>
+				<nav >
 					<div class="logo-container">
 						<img src="./assets/images/logo.png" alt="logo of travelStorm agency"> 
 					</div>
-					<div class="anchor-container">
+					<div class="anchor-container flex-center">
 						<a href="index.html">Home</a>
 						<a href="./pages/brussels.html">Brussles</a>
 						<a href="./pages/kathmandu.html">Kathmandu</a>
@@ -25,17 +25,46 @@
 					</div>
 				</nav>	
 			</header>
-			<section class="section-hero">
+			<section class="section-hero flex-center">
 				<div class="hero-text-container">
 					<h1>Travel like a storm!</h1>
-					<p>TravelStorm brings travelling quickly among chosen destination into as simple as any local trip, choose your destination and dates and pack your bags!</p>
+					<p>TravelStorm brings travelling quickly among chosen destination into as simple as any local trip,<br> choose your destination and dates and pack your bags!</p>
 					<button>Choose your Destination!</button>
 				</div>
-				<div>
+				<div class="hero-img-container flex-center">
 					<img src="./assets/images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
 				</div>
 			</section>
-			<footer>
+			<section class="section-populars flex-center flex-column">
+				<div>
+					<h2>Our Most Popular Destinations!</h2>
+				</div>
+				<div class="populars-container flex-center">
+					<article class="flex-center flex-column">
+						<img src="./assets/images/home-popular-1.jpg" alt="An image of Brussels">
+						<p>Brussels</p>
+						<p></p>
+					</article>
+					<article class="flex-center flex-column">
+						<img src="./assets/images/home-popular-2.jpg" alt="An image of Kathmandu">
+						<p>Kathmandu</p>
+					</article>
+					<article class="flex-center flex-column">
+						<img src="./assets/images/home-popular-3.jpeg" alt="An image of Newcastle">
+						<p>NewCastle</p>
+					</article>
+					<article class="flex-center flex-column">
+						<img src="./assets/images/home-popular-4.jpg" alt="An image of Tel-Aviv">
+						<p>Tel-Aviv</p>
+					</article>
+				</div>
+			</section>
+			<section class="section-testimonies">
+				
+			</section>
+
+			<section></section>
+			<footer class="flex-center">
 				<p>&copy; All rights reserved to TravelStorm Inc.</p>
 			</footer>
 		</main>
