--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<header>
 				<nav>
 					<div class="logo-container">
-						<img src="./assets/images/logo.png" alt="logo of travelStorm agency"> 
+						<img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency"> 
 					</div>
 					<div class="anchor-container flex-center">
 						<a href="index.html" class="hover">Home</a>
@@ -32,7 +32,7 @@
 					<button class="btn hover">Choose your Destination!</button>
 				</div>
 				<div class="hero-img-container flex-center">
-					<img src="./assets/images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
+					<img src="./assets/images/home-images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
 				</div>
 			</section>
 			<section class="section-populars flex-center flex-column">
@@ -41,20 +41,20 @@
 				</div>
 				<div class="populars-container flex-center">
 					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-popular-1.jpg" alt="An image of Brussels">
+						<img src="./assets/images/home-images/home-popular-1.jpg" alt="An image of Brussels">
 						<p>Brussels</p>
 						<p></p>
 					</article>
 					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-popular-2.jpg" alt="An image of Kathmandu">
+						<img src="./assets/images/home-images/home-popular-2.jpg" alt="An image of Kathmandu">
 						<p>Kathmandu</p>
 					</article>
 					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-popular-3.jpeg" alt="An image of Newcastle">
+						<img src="./assets/images/home-images/home-popular-3.jpeg" alt="An image of Newcastle">
 						<p>NewCastle</p>
 					</article>
 					<article class="flex-center flex-column hover">
-						<img src="./assets/images/home-popular-4.jpg" alt="An image of Tel-Aviv">
+						<img src="./assets/images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv">
 						<p>Tel-Aviv</p>
 					</article>
 				</div>
