--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<p>-Bruce</p>
 				</div>
 			</section>
-			<section class="cta-section">
+			<section class="cta-section flex-center">
 				<div class="flex-center flex-column">
 					<h3>Get Your Perfect Vacation Now!</h3>
 					<p>Sign up with us by clicking the button and enjoy your wildest vacation yet!</p>
