corrected brussels link

--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -15,11 +15,11 @@
           <img src="../assets/logo.png" alt="logo of travelStorm agency" />
         </div>
         <div class="anchor-container">
-          <a href="index.html">Home</a>
-          <a href="./pages/brussels.html">Brussels</a>
-          <a href="./pages/kathmandu.html">Kathmandu</a>
-          <a href="./pages/newcastle.html">Newcastle</a>
-          <a href="./pages/telaviv.html">Tel-Aviv</a>
+          <a href="../index.html">Home</a>
+          <a href="./brussels.html">Brussels</a>
+          <a href="./kathmandu.html">Kathmandu</a>
+          <a href="./newcastle.html">Newcastle</a>
+          <a href="./telaviv.html">Tel-Aviv</a>
         </div>
       </nav>
     </header>
