--- a/index.html
+++ b/index.html
@@ -1,92 +1,84 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" type="text/css" href="./styles/home.css" />
-    <title>Travel-Storm</title>
-  </head>
-  <body>
-    <main>
-      <header>
-        <nav>
-          <div class="logo-container">
-            <img src="./assets/logo.png" alt="logo of travelStorm agency" />
-          </div>
-          <div class="anchor-container">
-            <a href="index.html">Home</a>
-            <a href="./pages/brussels.html">Brussles</a>
-            <a href="./pages/kathmandu.html">Kathmandu</a>
-            <a href="./pages/newcastle.html">Newcastle</a>
-            <a href="./pages/telaviv.html">Tel-Aviv</a>
-          </div>
-        </nav>
-      </header>
-      <section class="section-hero">
-        <div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce nec
-            ornare nibh. In rhoncus tristique nulla a congue. Nullam blandit,
-            augue at facilisis vestibulum, lectus velit placerat augue, ac
-            semper nibh dolor at augue. Sed maximus nibh at auctor imperdiet.
-            Sed pretium risus et nisl facilisis, et aliquet velit ullamcorper.
-            Mauris placerat sem nec ipsum vestibulum elementum. Vivamus ornare,
-            sem non facilisis ullamcorper, odio diam gravida nisl, vel accumsan
-            urna nibh egestas augue. Quisque id libero arcu. Etiam lobortis
-            mattis neque eget rutrum. Vestibulum dictum risus ut commodo
-            lacinia. Etiam pretium ut dolor sit amet semper. In ultricies
-            pharetra neque, non dictum massa tempor eget. Vestibulum ante ipsum
-            primis in faucibus orci luctus et ultrices posuere cubilia curae;
-            Donec ut orci a massa bibendum suscipit. Aliquam tempus eros
-            pulvinar, consequat enim ut, pretium justo. Morbi vitae tellus
-            interdum, luctus dui laoreet, congue velit. Integer eget facilisis
-            justo, eget malesuada diam. Sed pretium, lorem ac efficitur feugiat,
-            turpis augue vulputate ligula, sit amet luctus ipsum enim sed
-            tellus. Sed quam mauris, aliquet in sagittis ut, dignissim eget
-            diam. Quisque vulputate consectetur nibh, tincidunt mollis diam
-            interdum ornare. Donec vitae tristique purus. Quisque laoreet
-            elementum nulla, in tincidunt nulla. Phasellus eget nunc justo. Nam
-            varius purus vel metus accumsan, a facilisis lectus tincidunt.
-            Aliquam finibus elit efficitur est elementum ullamcorper. Curabitur
-            eu tempus velit. Donec sodales facilisis consequat. Proin a pharetra
-            lectus. Curabitur vel pretium ligula. Pellentesque magna augue,
-            blandit in consequat ut, eleifend vitae tellus. Vestibulum ante
-            ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-            curae; Nunc mattis elit felis, nec venenatis erat rutrum ut. Donec
-            id odio vehicula, blandit quam ac, lobortis nulla. Maecenas tempus
-            sem ornare purus volutpat fermentum. Vivamus rhoncus turpis est, et
-            feugiat urna ultrices a. Nulla congue turpis in metus accumsan, id
-            viverra nisl euismod. Curabitur molestie non sapien sit amet
-            posuere. Nunc lectus tellus, fringilla vitae suscipit eu,
-            ullamcorper a est. Aenean iaculis auctor lacus et sagittis. Donec
-            blandit quam sed ante venenatis euismod. Integer in tempor lectus.
-            Vestibulum pellentesque justo ipsum, sed mollis dui facilisis non.
-            Aliquam consectetur mi ac aliquet hendrerit. Maecenas fringilla nec
-            felis vel bibendum. Integer fermentum accumsan sapien, at vulputate
-            tortor molestie sit amet. Nulla luctus tempus eros, eu sodales diam
-            mattis non. In dignissim, sem et interdum mollis, mauris leo
-            imperdiet ante, aliquam ultricies sem dolor vel tortor. Nulla
-            feugiat neque vitae egestas suscipit. Nullam vel velit vehicula,
-            feugiat lorem at, eleifend velit. Mauris egestas odio eu odio
-            tincidunt cursus. Praesent et ornare felis. Maecenas ultricies nisi
-            at nulla rutrum, laoreet sodales urna hendrerit. Aliquam urna nulla,
-            faucibus quis venenatis eget, placerat non orci. Nunc sagittis non
-            risus ac vehicula. Nulla malesuada eget lacus nec scelerisque. Donec
-            consectetur metus ac ex dapibus facilisis. Etiam vehicula auctor
-            odio, quis suscipit lacus interdum nec. Ut et justo in tortor
-            rhoncus luctus at in eros.
-          </p>
-        </div>
-      </section>
-      <footer>
-        <p>&copy; All rights reserved to TravelStorm Inc.</p>
-      </footer>
-    </main>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="./styles/home.css">
+		<title>Travel-Storm</title>
+	</head>
+	<body>
+		<main>		
+			<header>
+				<nav>
+					<div class="logo-container">
+						<img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency"> 
+					</div>
+					<div class="anchor-container flex-center">
+						<a href="index.html" class="hover">Home</a>
+						<a href="./pages/brussels.html" class="hover">Brussles</a>
+						<a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
+						<a href="./pages/newcastle.html" class="hover">Newcastle</a>
+						<a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
+					</div>
+				</nav>	
+			</header>
+			<section class="section-hero flex-center">
+				<div class="hero-text-container">
+					<h1>Travel like a storm!</h1>
+					<p>TravelStorm brings travelling quickly among chosen destination into as simple as any local trip,<br> choose your destination and dates and pack your bags!</p>
+					<button class="btn hover">Choose your Destination!</button>
+				</div>
+				<div class="hero-img-container flex-center">
+					<img src="./assets/images/home-images/home-hero-image.jpeg" alt=" an image of a map with a cup of coffee with a plane shaped foam and a wallet with a flight ticket sticking out">
+				</div>
+			</section>
+			<section class="section-populars flex-center flex-column">
+				<div>
+					<h2>Our Most Popular Destinations!</h2>
+				</div>
+				<div class="populars-container flex-center">
+					<article class="flex-center flex-column hover">
+						<img src="./assets/images/home-images/home-popular-1.jpg" alt="An image of Brussels">
+						<p>Brussels</p>
+						<p></p>
+					</article>
+					<article class="flex-center flex-column hover">
+						<img src="./assets/images/home-images/home-popular-2.jpg" alt="An image of Kathmandu">
+						<p>Kathmandu</p>
+					</article>
+					<article class="flex-center flex-column hover">
+						<img src="./assets/images/home-images/home-popular-3.jpeg" alt="An image of Newcastle">
+						<p>NewCastle</p>
+					</article>
+					<article class="flex-center flex-column hover">
+						<img src="./assets/images/home-images/home-popular-4.jpg" alt="An image of Tel-Aviv">
+						<p>Tel-Aviv</p>
+					</article>
+				</div>
+			</section>
+			<section class="section-testimonies flex-center flex-column">
+				<blockquote class="quote">
+					<q>I have found myself constantly prolonging my waste of time over a multi destination trip before, till I found TravelStorm and my life changed, the time it would take me to order my trip to the lake a few towns over, became the same time I would need to plan a trip through multiple countries, I was trully blown away thank you TravelStorm</q>
+				</blockquote>
+				<div class="customer">
+					<p>-Bruce</p>
+				</div>
+			</section>
+			<section class="cta-section flex-center">
+				<div class="flex-center flex-column">
+					<h3>Get Your Perfect Vacation Now!</h3>
+					<p>Sign up with us by clicking the button and enjoy your wildest vacation yet!</p>
+				</div>
+				<div>
+					<button class="btn hover">Sign Up!</button>
+				</div>
+			</section>
+			<footer class="flex-center">
+				<p>&copy; All rights reserved to TravelStorm Inc.</p>
+			</footer>
+		</main>
+	</body>
 </html>
