--- a/pages/newcastle.html
+++ b/pages/newcastle.html
@@ -6,7 +6,7 @@
     <meta name="description" content="This is the page for Newcastle" />
     <meta name="author" content="David Eglintine" />
     <link rel="stylesheet" href="../styles/newcastle.css" />
-    <title>Brussels</title>
+    <title>Newcastle Upon Tyne</title>
   </head>
   <body>
     <header>
