--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				</div>
 			</section>
 			<footer class="flex-center">
-				<p>&copy; All rights reserved to TravelStorm Inc.</p>
+				<p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
 			</footer>
 		</main>
 	</body>
