--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -73,7 +73,7 @@
             <h2>Swayambhunath Temple</h2>
             <div class="details-container">
                 <div class="image-container">
-                    <img src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg" alt="swayambunath temple the majestic stupa">
+                    <img src="../images/kathmandu/kathmandu_swayambunath_temple_details.jpg" alt="swayambunath temple the majestic stupa" loading="lazy">
                 </div>
                 <div class="details-text-container">
                     <p>Swayambhunath is a glorious ancient religious architecture, located in the middle of Kathmandu city. It is center of faith of both Buddhist and Hindus.</p>
@@ -129,7 +129,7 @@
                     <button>Book a Tour</button>
                 </div>
                 <div class="image-container">
-                    <img src="../images/kathmandu/kathmandu_bhaktapur_durbar_square_details.jpg" alt="bhaktapur durbar square the palace of kings">
+                    <img src="../images/kathmandu/kathmandu_bhaktapur_durbar_square_details.jpg" alt="bhaktapur durbar square the palace of kings" loading="lazy">
                 </div>
             </div>
         </section>
@@ -137,7 +137,7 @@
             <h2>Narayanhiti Palace Museum</h2>         
             <div class="details-container">
                 <div class="image-container">
-                    <img src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg" alt="narayanhiti royal palace museum the royal history of nepal">
+                    <img src="../images/kathmandu/kathmandu_narayanhiti_palace_museum-details.jpg" alt="narayanhiti royal palace museum the royal history of nepal" loading="lazy">
                 </div>
                 <div class="details-text-container">
                     <p>Narayanhiti Royal Palace Museum in Kathmandu unveils Nepal's regal history through ornate halls and curated exhibits of royal artifacts. Explore opulent living quarters, ceremonial spaces, and a rich collection of historical treasures, offering a captivating glimpse into the country's royal heritage. The museum, set amidst landscaped gardens, invites visitors to step back in time and experience the grandeur of Narayanhiti.</p>
@@ -193,7 +193,7 @@
                     <button>Book a Tour</button>
                 </div>
                 <div class="image-container">
-                    <img src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg" alt="the holy temple of pashupatinath">
+                    <img src="../images/kathmandu/kathmandu_pashupatinath_temple-details.jpg" alt="the holy temple of pashupatinath" loading="lazy">
                 </div>
             </div>
         </section>
@@ -201,7 +201,7 @@
             <h2>Kopan Monastry</h2>         
             <div class="details-container">
                 <div class="image-container">
-                    <img src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg" alt="Kopan Monastery: Tranquil Tibetan retreat">
+                    <img src="../images/kathmandu/kathmandu_kopan_monastery_details.jpg" alt="Kopan Monastery: Tranquil Tibetan retreat" loading="lazy">
                 </div>
                 <div class="details-text-container">
                     <p>Kopan Monastery, nestled in serene surroundings, is a tranquil Tibetan retreat near Kathmandu. Embrace the peaceful ambiance, engage in meditation, and immerse yourself in Tibetan Buddhist wisdom at this spiritual haven.</p>
