--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					</div>
 					<div class="anchor-container flex-center">
 						<a href="index.html" class="hover">Home</a>
-						<a href="./pages/brussels.html" class="hover">Brussles</a>
+						<a href="./pages/brussels.html" class="hover">Brussels</a>
 						<a href="./pages/kathmandu.html" class="hover">Kathmandu</a>
 						<a href="./pages/newcastle.html" class="hover">Newcastle</a>
 						<a href="./pages/telaviv.html" class="hover">Tel-Aviv</a>
