--- a/pages/kathmandu.html
+++ b/pages/kathmandu.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo-container" href="top">
+        <a class="logo-container" href="#top">
           <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
           <p>TravelStorm</p>
         </a>
