--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -20,8 +20,10 @@
     <header>
       <nav>
         <div class="logo-container">
-          <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
-          <p>TravelStorm</p>
+          <a href="#">
+            <!-- <img src="./assets/images/home-images/logo.png" alt="logo of travelStorm agency">  -->
+            <p>TravelStorm</p>
+          </a>
         </div>
         <div class="anchor-container flex-center">
           <a href="../index.html">Home</a>
