added icons to footer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="./images/favicon_io/favicon-16x16.png"
     />
     <!-- end -->
+    <script src="https://kit.fontawesome.com/450ef45e17.js" crossorigin="anonymous"></script>
     <title>Travel-Storm</title>
   </head>
   <body>
@@ -120,8 +121,15 @@
           <a href="#hero" class="logo-anchor"><button class="btn hover">Sign Up!</button></a>
         </div>
       </section>
-      <footer class="flex-center">
+      <footer class="flex-center flex-column">
         <p>2024 &copy; All rights reserved to TravelStorm Inc.</p>
+        <div class="flex-center">
+          <a href="#"><i class="icon hover fa-regular fa-envelope"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="icon hover fa-brands fa-linkedin"></i></a>
+        </div>
       </footer>
     </main>
   </body>
