changed main to best

--- a/pages/brussels.html
+++ b/pages/brussels.html
@@ -49,7 +49,7 @@ awesome/6.2.0/css/all.min.css"
       <button>Read More</button>
     </main>
     <section class="places">
-      <h2>Main places to visit</h2>
+      <h2>Best places to visit</h2>
       <div class="card-container">
         <div class="card">
           <img src="../images/brussels/antwerp2.jpg" alt="image" />
